src/grammars/SOGAParser.py
# Generated from grammars/SOGA.g4 by ANTLR 4.10
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SOGAParser ( Parser ):

    grammarFileName = "SOGA.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'data'", "'='", "'array['", "']'", 
                     "'['", "'('", "','", "')'", "'skip'", "'+'", "'-'", 
                     "'*'", "'@'", "'end if'", "'if'", "'{'", "'}'", "'else'", 
                     "'<'", "'<='", "'>='", "'>'", "'=='", "'!='", "'prune('", 
                     "'observe('", "'for'", "'in range('", "'end for'", 
                     "'^2'", "'gm('", "'uniform('", "'matrix'", "'matrix_gm_full'", 
                     "'matrix_gm'", "'transp'", "'row_sum'", "'col_sum'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "MATRIX", "MATRIX_GM_FULL", 
                      "MATRIX_GM", "TRANSP", "ROW_SUM", "COL_SUM", "IDV", 
                      "NUM", "COMM", "WS", "DIGIT" ]

    RULE_progr = 0
    RULE_data = 1
    RULE_array = 2
    RULE_matrix_decl = 3
    RULE_matrix_gm = 4
    RULE_matrix_gm_full = 5
    RULE_mlist = 6
    RULE_instr = 7
    RULE_assignment = 8
    RULE_const = 9
    RULE_const_term = 10
    RULE_add = 11
    RULE_add_term = 12
    RULE_mul = 13
    RULE_conditional = 14
    RULE_ifclause = 15
    RULE_elseclause = 16
    RULE_block = 17
    RULE_bexpr = 18
    RULE_lexpr = 19
    RULE_monom = 20
    RULE_prune = 21
    RULE_observe = 22
    RULE_loop = 23
    RULE_expr = 24
    RULE_vars = 25
    RULE_transp_call = 26
    RULE_row_sum_expr = 27
    RULE_col_sum_expr = 28
    RULE_idd = 29
    RULE_symvars = 30
    RULE_gm = 31
    RULE_uniform = 32
    RULE_list = 33

    ruleNames =  [ "progr", "data", "array", "matrix_decl", "matrix_gm", 
                   "matrix_gm_full", "mlist", "instr", "assignment", "const", 
                   "const_term", "add", "add_term", "mul", "conditional", 
                   "ifclause", "elseclause", "block", "bexpr", "lexpr", 
                   "monom", "prune", "observe", "loop", "expr", "vars", 
                   "transp_call", "row_sum_expr", "col_sum_expr", "idd", 
                   "symvars", "gm", "uniform", "list" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    MATRIX=34
    MATRIX_GM_FULL=35
    MATRIX_GM=36
    TRANSP=37
    ROW_SUM=38
    COL_SUM=39
    IDV=40
    NUM=41
    COMM=42
    WS=43
    DIGIT=44

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def data(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SOGAParser.DataContext)
            else:
                return self.getTypedRuleContext(SOGAParser.DataContext,i)


        def instr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SOGAParser.InstrContext)
            else:
                return self.getTypedRuleContext(SOGAParser.InstrContext,i)


        def array(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SOGAParser.ArrayContext)
            else:
                return self.getTypedRuleContext(SOGAParser.ArrayContext,i)


        def matrix_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SOGAParser.Matrix_declContext)
            else:
                return self.getTypedRuleContext(SOGAParser.Matrix_declContext,i)


        def getRuleIndex(self):
            return SOGAParser.RULE_progr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgr" ):
                listener.enterProgr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgr" ):
                listener.exitProgr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgr" ):
                return visitor.visitProgr(self)
            else:
                return visitor.visitChildren(self)




    def progr(self):

        localctx = SOGAParser.ProgrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_progr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 68
                    self.data()
                    self.state = 69
                    self.match(SOGAParser.T__0) 
                self.state = 75
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SOGAParser.T__3) | (1 << SOGAParser.T__9) | (1 << SOGAParser.T__15) | (1 << SOGAParser.T__25) | (1 << SOGAParser.T__26) | (1 << SOGAParser.T__27) | (1 << SOGAParser.MATRIX) | (1 << SOGAParser.IDV))) != 0):
                self.state = 85
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [SOGAParser.T__9, SOGAParser.T__15, SOGAParser.T__25, SOGAParser.T__26, SOGAParser.T__27, SOGAParser.IDV]:
                    self.state = 76
                    self.instr()
                    self.state = 77
                    self.match(SOGAParser.T__0)
                    pass
                elif token in [SOGAParser.T__3]:
                    self.state = 79
                    self.array()
                    self.state = 80
                    self.match(SOGAParser.T__0)
                    pass
                elif token in [SOGAParser.MATRIX]:
                    self.state = 82
                    self.matrix_decl()
                    self.state = 83
                    self.match(SOGAParser.T__0)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DataContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def symvars(self):
            return self.getTypedRuleContext(SOGAParser.SymvarsContext,0)


        def list_(self):
            return self.getTypedRuleContext(SOGAParser.ListContext,0)


        def mlist(self):
            return self.getTypedRuleContext(SOGAParser.MlistContext,0)


        def getRuleIndex(self):
            return SOGAParser.RULE_data

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterData" ):
                listener.enterData(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitData" ):
                listener.exitData(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitData" ):
                return visitor.visitData(self)
            else:
                return visitor.visitChildren(self)




    def data(self):

        localctx = SOGAParser.DataContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_data)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(SOGAParser.T__1)
            self.state = 91
            self.symvars()
            self.state = 92
            self.match(SOGAParser.T__2)
            self.state = 95
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 93
                self.list_()
                pass

            elif la_ == 2:
                self.state = 94
                self.mlist()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUM(self):
            return self.getToken(SOGAParser.NUM, 0)

        def IDV(self):
            return self.getToken(SOGAParser.IDV, 0)

        def getRuleIndex(self):
            return SOGAParser.RULE_array

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArray" ):
                listener.enterArray(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArray" ):
                listener.exitArray(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray" ):
                return visitor.visitArray(self)
            else:
                return visitor.visitChildren(self)




    def array(self):

        localctx = SOGAParser.ArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_array)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(SOGAParser.T__3)
            self.state = 98
            self.match(SOGAParser.NUM)
            self.state = 99
            self.match(SOGAParser.T__4)
            self.state = 100
            self.match(SOGAParser.IDV)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Matrix_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MATRIX(self):
            return self.getToken(SOGAParser.MATRIX, 0)

        def NUM(self, i:int=None):
            if i is None:
                return self.getTokens(SOGAParser.NUM)
            else:
                return self.getToken(SOGAParser.NUM, i)

        def IDV(self):
            return self.getToken(SOGAParser.IDV, 0)

        def getRuleIndex(self):
            return SOGAParser.RULE_matrix_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMatrix_decl" ):
                listener.enterMatrix_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMatrix_decl" ):
                listener.exitMatrix_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMatrix_decl" ):
                return visitor.visitMatrix_decl(self)
            else:
                return visitor.visitChildren(self)




    def matrix_decl(self):

        localctx = SOGAParser.Matrix_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_matrix_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(SOGAParser.MATRIX)
            self.state = 103
            self.match(SOGAParser.T__5)
            self.state = 104
            self.match(SOGAParser.NUM)
            self.state = 105
            self.match(SOGAParser.T__4)
            self.state = 106
            self.match(SOGAParser.T__5)
            self.state = 107
            self.match(SOGAParser.NUM)
            self.state = 108
            self.match(SOGAParser.T__4)
            self.state = 109
            self.match(SOGAParser.IDV)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Matrix_gmContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MATRIX_GM(self):
            return self.getToken(SOGAParser.MATRIX_GM, 0)

        def mlist(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SOGAParser.MlistContext)
            else:
                return self.getTypedRuleContext(SOGAParser.MlistContext,i)


        def getRuleIndex(self):
            return SOGAParser.RULE_matrix_gm

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMatrix_gm" ):
                listener.enterMatrix_gm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMatrix_gm" ):
                listener.exitMatrix_gm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMatrix_gm" ):
                return visitor.visitMatrix_gm(self)
            else:
                return visitor.visitChildren(self)




    def matrix_gm(self):

        localctx = SOGAParser.Matrix_gmContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_matrix_gm)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(SOGAParser.MATRIX_GM)
            self.state = 112
            self.match(SOGAParser.T__6)
            self.state = 113
            self.mlist()
            self.state = 114
            self.match(SOGAParser.T__7)
            self.state = 115
            self.mlist()
            self.state = 116
            self.match(SOGAParser.T__7)
            self.state = 117
            self.mlist()
            self.state = 118
            self.match(SOGAParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Matrix_gm_fullContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MATRIX_GM_FULL(self):
            return self.getToken(SOGAParser.MATRIX_GM_FULL, 0)

        def mlist(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SOGAParser.MlistContext)
            else:
                return self.getTypedRuleContext(SOGAParser.MlistContext,i)


        def getRuleIndex(self):
            return SOGAParser.RULE_matrix_gm_full

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMatrix_gm_full" ):
                listener.enterMatrix_gm_full(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMatrix_gm_full" ):
                listener.exitMatrix_gm_full(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMatrix_gm_full" ):
                return visitor.visitMatrix_gm_full(self)
            else:
                return visitor.visitChildren(self)




    def matrix_gm_full(self):

        localctx = SOGAParser.Matrix_gm_fullContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_matrix_gm_full)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(SOGAParser.MATRIX_GM_FULL)
            self.state = 121
            self.match(SOGAParser.T__6)
            self.state = 122
            self.mlist()
            self.state = 123
            self.match(SOGAParser.T__7)
            self.state = 124
            self.mlist()
            self.state = 125
            self.match(SOGAParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def list_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SOGAParser.ListContext)
            else:
                return self.getTypedRuleContext(SOGAParser.ListContext,i)


        def getRuleIndex(self):
            return SOGAParser.RULE_mlist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMlist" ):
                listener.enterMlist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMlist" ):
                listener.exitMlist(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMlist" ):
                return visitor.visitMlist(self)
            else:
                return visitor.visitChildren(self)




    def mlist(self):

        localctx = SOGAParser.MlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_mlist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(SOGAParser.T__5)
            self.state = 128
            self.list_()
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SOGAParser.T__7:
                self.state = 129
                self.match(SOGAParser.T__7)
                self.state = 130
                self.list_()
                self.state = 135
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 136
            self.match(SOGAParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(SOGAParser.AssignmentContext,0)


        def conditional(self):
            return self.getTypedRuleContext(SOGAParser.ConditionalContext,0)


        def prune(self):
            return self.getTypedRuleContext(SOGAParser.PruneContext,0)


        def observe(self):
            return self.getTypedRuleContext(SOGAParser.ObserveContext,0)


        def loop(self):
            return self.getTypedRuleContext(SOGAParser.LoopContext,0)


        def getRuleIndex(self):
            return SOGAParser.RULE_instr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstr" ):
                listener.enterInstr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstr" ):
                listener.exitInstr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstr" ):
                return visitor.visitInstr(self)
            else:
                return visitor.visitChildren(self)




    def instr(self):

        localctx = SOGAParser.InstrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_instr)
        try:
            self.state = 143
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SOGAParser.T__9, SOGAParser.IDV]:
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                self.assignment()
                pass
            elif token in [SOGAParser.T__15]:
                self.enterOuterAlt(localctx, 2)
                self.state = 139
                self.conditional()
                pass
            elif token in [SOGAParser.T__25]:
                self.enterOuterAlt(localctx, 3)
                self.state = 140
                self.prune()
                pass
            elif token in [SOGAParser.T__26]:
                self.enterOuterAlt(localctx, 4)
                self.state = 141
                self.observe()
                pass
            elif token in [SOGAParser.T__27]:
                self.enterOuterAlt(localctx, 5)
                self.state = 142
                self.loop()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def symvars(self):
            return self.getTypedRuleContext(SOGAParser.SymvarsContext,0)


        def const(self):
            return self.getTypedRuleContext(SOGAParser.ConstContext,0)


        def add(self):
            return self.getTypedRuleContext(SOGAParser.AddContext,0)


        def mul(self):
            return self.getTypedRuleContext(SOGAParser.MulContext,0)


        def getRuleIndex(self):
            return SOGAParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = SOGAParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_assignment)
        try:
            self.state = 153
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SOGAParser.IDV]:
                self.enterOuterAlt(localctx, 1)
                self.state = 145
                self.symvars()
                self.state = 146
                self.match(SOGAParser.T__2)
                self.state = 150
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                if la_ == 1:
                    self.state = 147
                    self.const()
                    pass

                elif la_ == 2:
                    self.state = 148
                    self.add()
                    pass

                elif la_ == 3:
                    self.state = 149
                    self.mul()
                    pass


                pass
            elif token in [SOGAParser.T__9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 152
                self.match(SOGAParser.T__9)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def const_term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SOGAParser.Const_termContext)
            else:
                return self.getTypedRuleContext(SOGAParser.Const_termContext,i)


        def getRuleIndex(self):
            return SOGAParser.RULE_const

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConst" ):
                listener.enterConst(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConst" ):
                listener.exitConst(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConst" ):
                return visitor.visitConst(self)
            else:
                return visitor.visitChildren(self)




    def const(self):

        localctx = SOGAParser.ConstContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_const)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.const_term()
            self.state = 160
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 156
                    _la = self._input.LA(1)
                    if not(_la==SOGAParser.T__10 or _la==SOGAParser.T__11):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 157
                    self.const_term() 
                self.state = 162
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Const_termContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUM(self, i:int=None):
            if i is None:
                return self.getTokens(SOGAParser.NUM)
            else:
                return self.getToken(SOGAParser.NUM, i)

        def idd(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SOGAParser.IddContext)
            else:
                return self.getTypedRuleContext(SOGAParser.IddContext,i)


        def getRuleIndex(self):
            return SOGAParser.RULE_const_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConst_term" ):
                listener.enterConst_term(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConst_term" ):
                listener.exitConst_term(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConst_term" ):
                return visitor.visitConst_term(self)
            else:
                return visitor.visitChildren(self)




    def const_term(self):

        localctx = SOGAParser.Const_termContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_const_term)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SOGAParser.NUM]:
                self.state = 163
                self.match(SOGAParser.NUM)
                pass
            elif token in [SOGAParser.IDV]:
                self.state = 164
                self.idd()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 172
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SOGAParser.T__12:
                self.state = 167
                self.match(SOGAParser.T__12)
                self.state = 170
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [SOGAParser.NUM]:
                    self.state = 168
                    self.match(SOGAParser.NUM)
                    pass
                elif token in [SOGAParser.IDV]:
                    self.state = 169
                    self.idd()
                    pass
                else:
                    raise NoViableAltException(self)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AddContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def add_term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SOGAParser.Add_termContext)
            else:
                return self.getTypedRuleContext(SOGAParser.Add_termContext,i)


        def getRuleIndex(self):
            return SOGAParser.RULE_add

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAdd" ):
                listener.enterAdd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAdd" ):
                listener.exitAdd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAdd" ):
                return visitor.visitAdd(self)
            else:
                return visitor.visitChildren(self)




    def add(self):
